[package]
name = "rtmp-switcher-controller"
version = "0.1.0"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "0.2", features = ["signal"] }
clap = "3.0.0-beta.2"
async-tungstenite = { version = "0.9", features = ["tokio-runtime", "tokio-openssl"] }
serde_json = "1"
log = "0.4"
openssl = "0.10"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde"] }
chrono = "0.4"

rtmp-switcher-controlling = { path = "../common" }
