[package]
name = "auteur-controller"
version = "0.1.0"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1.0", features = ["signal", "rt"] }
clap = { version = "3", features = ["derive"] }
async-tungstenite = { version = "0.17", features = ["tokio-runtime", "tokio-openssl"] }
serde_json = "1"
log = "0.4"
openssl = "0.10"
env_logger = "0.9"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = "0.4"

auteur-controlling = { path = "../common" }
