[package]
name = "rtmp-switcher"
version = "0.1.0"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
glib = "0.10"
futures = "0.3"
actix = "0.10"
actix-rt = "1"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
actix-service = "1"
actix-files = "0.4"
actix-cors = "0.5"
openssl = "0.10"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.1", features = ["std-future"] }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-error = "0.1"
serde = "1"
serde_json = "1"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
priority-queue = "1.1.0"

rtmp-switcher-controlling = { path = "../common" }
