[package]
name = "rtmp-switcher"
version = "0.1.0"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
glib = "0.10"
futures = "0.3"
actix = "0.11"
actix-rt = "2"
actix-web = { version = "4.0.0-beta.5", features = ["openssl"] }
actix-web-actors = "4.0.0-beta.4"
actix-service = "=2.0.0-beta.5"
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-web-httpauth = "0.6.0-beta.1"
openssl = "0.10"
tracing-actix-web = "0.4.0-beta.1"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.1", features = ["std-future"] }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-error = "0.1"
tracing-appender = "0.1"
serde = "1"
serde_json = "1"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
priority-queue = "1.1.0"
smallvec = "1"

rtmp-switcher-controlling = { path = "../common" }
