[package]
name = "auteur"
version = "0.1.0"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-utils = { package = "gstreamer-utils", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
glib = "0.15"
futures = "0.3"
tokio = { version = "1.18.4", features = ["time", "test-util"] }
actix = "0.13"
actix-rt = "2"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4"
openssl = "0.10"
tracing-actix-web = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-actix = "0.4.0"
tracing-futures = { version = "0.2", features = ["std-future"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-error = "0.2"
tracing-appender = "0.2"
test-log = { version = "0.2", features = ["trace"], default-features = false }
serde = "1"
serde_json = "1"
structopt = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
priority-queue = "1.1.0"
smallvec = "1"

auteur-controlling = { path = "../common" }

[dev-dependencies]
tempfile = "3.2.0"
